@@ -157,6 +157,9 @@ enum {
 #define MAX_GPG_KEY_ID      128
 #define MAX_USERNAME_LEN    30
 
+#define MAX_KEY_LEN                 128
+#define MAX_B64_KEY_LEN             180
+
 /* Command line argument / argv handling
 */
 #define MAX_CMDLINE_ARGS            30                  /*!< should be way more than enough */
