@@ -141,6 +141,10 @@ enum {
     FW_LIST         = 0x200,
     FW_LIST_ALL,
     FW_FLUSH,
+    KEY_GEN_FILE,
+    KEY_LEN,
+    HMAC_KEY_LEN,
+    HMAC_DIGEST_TYPE,
     AFL_PKT_FILE,
     GPG_HOME_DIR,
     GPG_EXE_PATH,
@@ -178,7 +182,12 @@ static struct option cmd_opts[] =
     {"fault-injection-tag",  1, NULL, FAULT_INJECTION_TAG},
     {"help",                 0, NULL, 'h'},
     {"interface",            1, NULL, 'i'},
-    {"kill",                 0, NULL, 'K'},
+    {"key-gen",              0, NULL, 'k'},
+    {"key-gen-file",         1, NULL, KEY_GEN_FILE },
+    {"key-len",              1, NULL, KEY_LEN },
+    {"hmac-key-len",         1, NULL, HMAC_KEY_LEN },
+    {"hmac-digest-type",     1, NULL, HMAC_DIGEST_TYPE },
+    {"kill",                 0, NULL, 'K' },
     {"fw-flush",             0, NULL, FW_FLUSH },
     {"fw-list",              0, NULL, FW_LIST },
     {"fw-list-all",          0, NULL, FW_LIST_ALL },
